# cpp-scrypt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  main.cc  pbkdf2.cc  salsa20.cc  salsa20.h  scrypt.h  utilities.cc  utilities.h
.github/workflows/: ccpp.yml
include/: pbkdf2.h  salsa20.h  scrypt.h  utilities.h
src/: pbkdf2.cc  salsa20.cc  scrypt.cc  utilities.cc
test/: CMakeLists.txt  pbkdf_test.cc  salsa_test.cc  scrypt_test.cc  test.cpp
